--- a/.gitignore
+++ b/.gitignore
@@ -157,4 +157,14 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+
+#Agregados Eitu
+__pycache__/
+Seguimiento/
+"Stocks Data/"
+"Stocks Grafs/"
+stck_dwnld.txt
+Resumen_Acciones.csv
+Stocks*/
